<resources>
    <string name="app_name">Programmer\'s Calculator</string>
    <string name="programmers_calculator">Programmers\' Calculator</string>
    <string name="decimal">Decimal</string>
    <string name="hexadecimal">Hexadecimal</string>
    <string name="octadecimal">Octadecimal</string>
    <string name="binary">Binary</string>
    <string name="subtract">-</string>
    <string name="equals">=</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="del">Del</string>
    <string name="clear">C</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="addition">+</string>
    <string name="sign">+/-</string>
    <string name="not">NOT</string>
    <string name="nand">NAND</string>
    <string name="and">AND</string>
    <string name="or">OR</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="f">F</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
</resources>
