<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BinaryActivity">

    <EditText
        android:id="@+id/mEditTextDecimalResult"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:focusable="false"
        android:gravity="center|right"
        android:focusableInTouchMode="false"
        android:inputType="number"
        android:textSize="42sp"
        android:text="@string/_0"
        android:typeface="serif"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#777777"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/LayoutHeight"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mButtonDel"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/del"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <include layout="@layout/layout_vertical_line" />

            <Button
                android:id="@+id/mButtonClear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/clear"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="serif" />

        </LinearLayout>

        <include layout="@layout/layout_horizontal_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/LayoutHeight"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mButtonAddition"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/addition"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="serif"/>

            <include layout="@layout/layout_vertical_line" />

            <Button
                android:id="@+id/mButton1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_1"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <include layout="@layout/layout_vertical_line" />

            <Button
                android:id="@+id/mButton0"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_0"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <include layout="@layout/layout_vertical_line" />

            <Button
                android:id="@+id/mButtonMultiply"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/multiply"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="serif" />

        </LinearLayout>

        <include layout="@layout/layout_horizontal_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/LayoutHeight"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mButtonSubtract"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/subtract"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <include layout="@layout/layout_vertical_line" />

            <Button
                android:id="@+id/mButtonAND"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/and"
                android:singleLine="true"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <include layout="@layout/layout_vertical_line" />

            <Button
                android:id="@+id/mButtonOR"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/or"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <include layout="@layout/layout_vertical_line" />

            <Button
                android:id="@+id/mButtonDivide"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/divide"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="serif" />

        </LinearLayout>

        <include layout="@layout/layout_horizontal_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/LayoutHeight"
            android:orientation="horizontal">

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="serif"
                android:enabled="false"/>

            <include layout="@layout/layout_vertical_line" />

            <Button
                android:id="@+id/mButtonNAND"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/nand"
                android:singleLine="true"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <include layout="@layout/layout_vertical_line" />

            <Button
                android:id="@+id/mButtonNOT"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/not"
                android:singleLine="true"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <include layout="@layout/layout_vertical_line" />

            <Button
                android:id="@+id/mButtonEquals"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/equals"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="serif" />

        </LinearLayout>

        <include layout="@layout/layout_horizontal_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/LayoutHeight"
            android:orientation="horizontal">

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="serif"
                android:enabled="false" />

            <include layout="@layout/layout_vertical_line" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="serif"
                android:enabled="false" />

            <include layout="@layout/layout_vertical_line" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="serif"
                android:enabled="false" />

            <include layout="@layout/layout_vertical_line" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="serif"
                android:enabled="false" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>